--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
     <!-- <link rel="stylesheet" href="./global.css"> -->
 
     <!-- Page-specific CSS -->
-    <!-- <link rel="stylesheet" href="./landing.css"> -->
+    <link rel="stylesheet" href="login.css">
 
     <title>Sign Up Page</title>
 
@@ -56,9 +56,8 @@
             </div>
 
             <button id="signupButton" type="submit">Sign Up</button>
-            <button id="resetButton" type="reset">Reset</button>
         </form>
-
+        <div id="displayupdate"></div>
         <div>
             <p>Already a member? <a href="#">Log In</a></p>
         </div>
