--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
       <input placeholder="Password" class="input" type="password" id="password" />
       <button id="loginBtn">Login</button>
       <a id="forgotPassword" href="#">Forgotten password?</a>
-      <button class="create" id="createAccountBtn">Create new account</button>
+      <button class="create" id="createAccountBtn" onclick="location.href='register.html'">Create new account</button>
     </form>
   </div> 
 
