--- a/login.html
+++ b/login.html
@@ -4,6 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+  crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="login.css" />
   <title>Login Page</title>
 </head>
@@ -12,13 +19,22 @@
   <div id="loader_cont">
     <div class="loader"></div>
   </div>
-  <form class="form" id="loginForm">
-    <input id="username" placeholder="Username" class="input" type="text" />
-    <input placeholder="Password" class="input" type="password" id="password" />
-    <button id="loginBtn">Login</button>
-    <a id="forgotPassword" href="#">Forgotten password?</a>
-    <button class="create" id="createAccountBtn">Create new account</button>
-  </form>
+  
+  <div class="maincontent container">
+    <form class="form" id="loginForm">
+      <input id="username" placeholder="Username" class="input" type="text" />
+      <input placeholder="Password" class="input" type="password" id="password" />
+      <button id="loginBtn">Login</button>
+      <a id="forgotPassword" href="#">Forgotten password?</a>
+      <button class="create" id="createAccountBtn" onclick="location.href='register.html'">Create new account</button>
+    </form>
+  </div> 
+
+
+ 
+ 
+ 
+ 
   <script src="login.js"></script>
 </body>
 
