--- a/post.html
+++ b/post.html
@@ -12,7 +12,6 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"></script>
 
-
   </head>
   <body>
     <div>
@@ -24,18 +23,17 @@
     <div>
       <form id="postForm" >
         <textarea id="createPost" placeholder="Write your post"></textarea>
-        <button type="button">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-image" viewBox="0 0 16 16">
-            <path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
-            <path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z"/>
-          </svg>
-        </button>
-        <input type="file" id="addimg" accept="image/png, image/jpg">
-        <button type="submit">Create Post</button>
+          <div class="input imgdiv">
+            <input type="file" id="addimg" accept="image/png, image/jpg">
+            <img id="img">
+          </div>
+          <button type="submit">Create Post</button>
       </form>
      
     </div>
     <div id="posts"></div>
+
+
     <script src="post.js"></script>
   </body>
 </html>
