--- a/post.html
+++ b/post.html
@@ -16,7 +16,7 @@
   <body>
     <div>
       <button id="logoutBtn">logout</button>
-      <a href="./profile.html">Profile</a>
+      <a href="./profile1.html">Profile</a>
       <button id="recent">recent</button>
     </div>
     
