--- a/profile1.html
+++ b/profile1.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width= , initial-scale=1.0" />
-    <title>Chirag social</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
@@ -34,7 +34,7 @@
                 <input type="search" placeholder="Search for creators, inspirations and projects" />
             </div>
             <div class="create">
-                <label class="btn btn-primary" for="create-post">New post</label>
+                <!-- <label class="btn btn-primary" for="create-post">New post</label> -->
                 <div class="profile-pic">
                     <img src="images/profile-8.jpg" alt="pic 1" />
                 </div>
@@ -389,7 +389,7 @@
 
 
     <!-- Page-specific code -->
-    <script src=""></script>
+    <script src="post.js"></script>
 </body>
 
 </html>
