--- a/profile1.html
+++ b/profile1.html
@@ -28,7 +28,7 @@
 <body>
     <nav>
         <div class="container">
-            <h2 class="logo">ChiragSocial</h2>
+            <h2 class="logo">DOUGHNUT</h2>
             <div class="search-bar">
                 <i class="uil uil-search"></i>
                 <input type="search" placeholder="Search for creators, inspirations and projects" />
@@ -41,7 +41,7 @@
                 Edit Profile
             </button>
                 <div class="profile-pic">
-                    <img src="images/profile-8.jpg" alt="pic 1" />
+                    <img src="img/Doughnut_logo.png" alt="pic 1" />
                 </div>
             </div>
         </div>
@@ -52,7 +52,7 @@
             <div class="left">
                 <a class="profile">
                     <div class="profile-pic">
-                        <img src="./images/profile-8.jpg">
+                        <img src="img/Doughnut_logo.png">
                     </div>
                     <div class="handle">
                         <h4 id="name">Username</h4>
