--- a/profile1.html
+++ b/profile1.html
@@ -147,7 +147,7 @@
                                         <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2-bg.webp"
                                             class="rounded-circle img-fluid" style="width: 100px;" />
                                     </div>
-                                    <h4 id="fullName" class="mb-2"></h4>
+                                    <h4 id="ProfileName" class="mb-2">hi</h4>
                                     <p class="text-muted mb-4">@Programmer <span class="mx-2">|</span> <a
                                             href="#!">mdbootstrap.com</a></p>
 
@@ -161,7 +161,7 @@
                                             <div class="modal-body">
                                                 <form id="editProfileForm">
                                                     <div class="form-group">
-                                                        <input id="fullNameInput" type="text" class="form-control"
+                                                        <input id="name" type="text" class="form-control"
                                                             placeholder="Username">
                                                     </div>
                                                     <div class="form-group">
@@ -208,9 +208,9 @@
                         <header>Create Post</header>
                         <form id="postForm" class = "postForm"action="./post.html">
                           <div class="content">
-                            <img src="icons/logo.png" alt="logo">
+                            <img src="img/donut.jpg" alt="logo">
                             <div class="details">
-                              <p>CodingNepal</p>
+                              <p>doughnut</p>
                               <div class="privacy">
                                 <i class="fas fa-user-friends"></i>
                                 <span>Friends</span>
@@ -220,7 +220,7 @@
                           </div>
                           <textarea  id = "createPost" placeholder="What's on your mind?" spellcheck="false" required></textarea>
                           <div class="theme-emoji">
-                            <img src="icons/theme.svg" alt="theme">
+                            <img1 src="./img/theme.svg" alt="theme">
                             <img src="icons/smile.svg" alt="smile">
                           </div>
                           <div class="options">
