--- a/login.html
+++ b/login.html
@@ -8,11 +8,12 @@
   <!--CSS Style Sheet-->
   <link rel="stylesheet" href="login.css"/>
   <title>Login</title>
-  <h1>Welcome to the Doughnut Diaries!</h1>
 
 </head>
 
 <body>
+  <div id="head"><img id="logo" src="images/Doughnut_logo-removebg-preview.png" alt=""><h1>Welcome to the Doughnut Diaries!</h1><img id="logo" src="images/Doughnut_logo-removebg-preview.png" alt=""></div> 
+
    <div id="loader_cont">
     <div class="loader"></div>
    </div>
@@ -24,6 +25,8 @@
     <a id="forgotPassword" href="#">Forgot password?</a>
     <button class="create" id="createAccountBtn">Create New Account</button>
   </form>
+
+
 
 
   <script src="login.js"></script>
