game page small change

--- a/tempgame.html
+++ b/tempgame.html
@@ -17,7 +17,7 @@
 
 <body>
       <div id="logodiv">
-        <img src="img/Doughnut_logo.png" id="weblogo" class="button" onclick="location.href='login.html'">    
+        <img src="img/Doughnut_logo-removebg-preview.png" id="weblogo" class="button" onclick="location.href='login.html'">    
       </div>
 
       <div id="intro">
