--- a/profile1.html
+++ b/profile1.html
@@ -41,7 +41,7 @@
                 Edit Profile
             </button>
                 <div class="profile-pic">
-                    <img src="img/Doughnut_logo.png" alt="pic 1" />
+                    <img class ="img" src="img/Doughnut_logo.png" alt="pic 1" />
                 </div>
             </div>
         </div>
@@ -52,7 +52,7 @@
             <div class="left">
                 <a class="profile">
                     <div class="profile-pic">
-                        <img src="img/Doughnut_logo.png">
+                        <img class ="img" src="img/Doughnut_logo.png">
                     </div>
                     <div class="handle">
                         <h4 id="name">Username</h4>
@@ -75,7 +75,7 @@
                         <div class="notifications-popup">
                             <div>
                                 <div class="profile-pic">
-                                    <img src="./images/profile-10.jpg">
+                                    <img  class ="img" src="./images/profile-10.jpg">
                                 </div>
                                 <div class="notification-body">
                                     <b>Abigail Willey</b> accepted your friend request
@@ -84,7 +84,7 @@
                             </div>
                             <div>
                                 <div class="profile-pic">
-                                    <img src="./images/profile-11.jpg">
+                                    <img class ="img" src="./images/profile-11.jpg">
                                 </div>
                                 <div class="notification-body">
                                     <b>Varun Nair</b> commented on your post
@@ -93,7 +93,7 @@
                             </div>
                             <div>
                                 <div class="profile-pic">
-                                    <img src="./images/profile-12.jpg">
+                                    <img class ="img" src="./images/profile-12.jpg">
                                 </div>
                                 <div class="notification-body">
                                     <b>Marry Opmong</b> and 210 other liked your post
@@ -102,7 +102,7 @@
                             </div>
                             <div>
                                 <div class="profile-pic">
-                                    <img src="./images/profile-13.jpg">
+                                    <img class ="img" src="./images/profile-13.jpg">
                                 </div>
                                 <div class="notification-body">
                                     <b>Wilson Fisk</b> started following you
@@ -220,17 +220,17 @@
                           </div>
                           <textarea  id = "createPost" placeholder="What's on your mind?" spellcheck="false" required></textarea>
                           <div class="theme-emoji">
-                            <img1 src="./img/theme.svg" alt="theme">
-                            <img src="icons/smile.svg" alt="smile">
+                            <img src="./img/theme.svg" alt="theme">
+                            <img src="./img/smile.svg" alt="smile">
                           </div>
                           <div class="options">
                             <p>Add to Your Post</p>
                             <ul class="list">
-                              <li><img src="icons/gallery.svg" alt="gallery"></li>
-                              <li><img src="icons/tag.svg" alt="gallery"></li>
-                              <li><img src="icons/emoji.svg" alt="gallery"></li>
-                              <li><img src="icons/mic.svg" alt="gallery"></li>
-                              <li><img src="icons/more.svg" alt="gallery"></li>
+                              <li><img src="img/gallery.svg" alt="gallery"></li>
+                              <li><img src="img/tag.svg" alt="gallery"></li>
+                              <li><img src="img/emoji.svg" alt="gallery"></li>
+                              <li><img src="img/mic.svg" alt="gallery"></li>
+                              <li><img src="img/more.svg" alt="gallery"></li>
                             </ul>
                           </div>
                           <button  type="submit" id = "profilePost">Post</button>
@@ -317,24 +317,12 @@
                                 Edit Profile
                             </button>
 
-
                         </h2>
 
                     </div>
 
                 </div>
-                <div>
-
-
-
-
-
-
-
-
-
-
-                </div>
+                
 
 
 
@@ -367,7 +355,7 @@
                     </div>
                     <div class="message">
                         <div class="profile-pic">
-                            <img src="images/profile-17.jpg">
+                            <img class ="img" src="images/profile-17.jpg">
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
@@ -377,7 +365,7 @@
                     </div>
                     <div class="message">
                         <div class="profile-pic">
-                            <img src="images/profile-18.jpg">
+                            <img class ="img" src="images/profile-18.jpg">
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
@@ -387,7 +375,7 @@
                     </div>
                     <div class="message">
                         <div class="profile-pic">
-                            <img src="images/profile-15.jpg">
+                            <img class ="img" src="images/profile-15.jpg">
                         </div>
                         <div class="message-body">
                             <h5>Chris Brown</h5>
@@ -396,7 +384,7 @@
                     </div>
                     <div class="message">
                         <div class="profile-pic">
-                            <img src="images/profile-14.jpg">
+                            <img class ="img" src="images/profile-14.jpg">
                         </div>
                         <div class="message-body">
                             <h5>Lana Rose</h5>
@@ -405,7 +393,7 @@
                     </div>
                     <div class="message">
                         <div class="profile-pic">
-                            <img src="images/profile-11.jpg">
+                            <img class ="img" src="images/profile-11.jpg">
                         </div>
                         <div class="message-body">
                             <h5>Varun Nair</h5>
@@ -414,7 +402,7 @@
                     </div>
                     <div class="message">
                         <div class="profile-pic">
-                            <img src="images/profile-1.jpg">
+                            <img class ="img" src="images/profile-1.jpg">
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
@@ -428,7 +416,7 @@
                     <div class="request">
                         <div class="info">
                             <div class="profile-pic">
-                                <img src="images/profile-13.jpg">
+                                <img class ="img" src="images/profile-13.jpg">
                             </div>
                             <div>
                                 <h5>Wilson Fisk</h5>
@@ -444,7 +432,7 @@
                     <div class="request">
                         <div class="info">
                             <div class="profile-pic">
-                                <img src="images/profile-20.jpg">
+                                <img class ="img" src="images/profile-20.jpg">
                             </div>
                             <div>
                                 <h5>Srishti Tirkey</h5>
