--- a/login.html
+++ b/login.html
@@ -18,33 +18,41 @@
 
 </head>
 
-<body>
-  <div id="head"><img id="logo" src="images/Doughnut_logo-removebg-preview.png" alt=""><h1>Welcome to the Doughnut Diaries!</h1><img id="logo" src="images/Doughnut_logo-removebg-preview.png" alt=""></div> 
-
-   <div id="loader_cont">
-    <div class="loader"></div>
-  </div>
-  
-  <div class="maincontent container">
-    <form class="form" id="loginForm">
-      <input id="username" placeholder="Username" class="input" type="text" />
-      <input placeholder="Password" class="input" type="password" id="password" />
-      <button id="loginBtn">Login</button>
-      <a id="forgotPassword" href="#">Forgotten password?</a>
-      <button class="create" id="createAccountBtn" onclick="location.href='register.html'">Create new account</button>
-    </form>
+<body class="container">
+  <div id="head">
+    <img id="logo" src="images/Doughnut_logo-removebg-preview.png" class="button" onclick="location.href='tempgame.html'">
+    <h1>Welcome to the Doughnut Diaries!</h1>
+    <img id="logo" src="images/Doughnut_logo-removebg-preview.png" alt="">
   </div> 
 
-  <div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-title">About Us</h5>
-      <p class="card-text">
-        Doughnut Diaires is a Free blog where users can sign up 
-        and join the doughnut loving community on an Online platform.
-        At Doughnut Diraires we keep a safe and fun platform where all 
-        doughnut loving enthusists can share their favorite flavors, recipies
-        bakeries, ect. </p>
+   <!-- <div id="loader_cont">
+    <div class="loader"></div>
+  </div> -->
+  
+  <div id="row">
+    <div class="maincontent">
+      <form class="form" id="loginForm">
+        <input id="username" placeholder="Username" class="input" type="text" />
+        <input placeholder="Password" class="input" type="password" id="password" />
+        <button id="loginBtn">Login</button>
+        <a id="forgotPassword" href="#">Forgotten password?</a>
+        <button class="create" id="createAccountBtn" onclick="location.href='register.html'">Create new account</button>
+      </form>
     </div>
+    
+
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">About Us</h5>
+        <p class="card-text">
+          Doughnut Diaires is a Free blog where users can sign up 
+          and join the doughnut loving community on an Online platform.
+          At Doughnut Diraires we keep a safe and fun platform where all 
+          doughnut loving enthusists can share their favorite flavors, recipies
+          bakeries, ect. </p>
+      </div>
+    </div>
+  
   </div>
 
 
