--- a/login.html
+++ b/login.html
@@ -17,6 +17,11 @@
    <div id="loader_cont">
     <div class="loader"></div>
    </div>
+   <div class="doughnut1">
+    <button onclick="">
+  <img src="images/doughnut-removebg-preview.png">
+    </button>
+  </div>
 
   <form class="form" id="loginForm">
     <input id="username" placeholder="Username" class="input" type="text" />
@@ -38,6 +43,11 @@
     </div>
   </div>
 
+<div class="doughnut1">
+  <button onclick="">
+<img src="images/doughnut-removebg-preview.png">
+  </button>
+</div>
 
 
   <script src="login.js"></script>
