--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
   <div id="head">
     <img id="logo" src="images/Doughnut_logo-removebg-preview.png" class="button" onclick="location.href='tempgame.html'">
     <h1>Welcome to the Doughnut Diaries!</h1>
-    <img id="logo" src="images/Doughnut_logo-removebg-preview.png" alt="">
+    <img id="logo1" src="images/Doughnut_logo-removebg-preview.png" alt="">
   </div> 
 
    <!-- <div id="loader_cont">
