--- a/register.html
+++ b/register.html
@@ -19,9 +19,9 @@
     <body class="container">
         
         <div id="head">
-          <img id="logo" src="images/Doughnut_logo-removebg-preview.png" alt="">
+          <img id="logo" src="images/Doughnut_logo-removebg-preview.png" class="button" onclick="location.href='login.html'">
           <h1>Welcome to the Doughnut Diaries!</h1>
-          <img id="logo" src="images/Doughnut_logo-removebg-preview.png" alt="">
+          <img id="logo1" src="images/Doughnut_logo-removebg-preview.png">
         </div> 
         
         <main>
