--- a/tempgame.html
+++ b/tempgame.html
@@ -11,7 +11,7 @@
   integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
   crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="gams.css" />
+  <link rel="stylesheet" href="css/gams.css" />
   <title>game Page</title>
 </head>
 
@@ -21,7 +21,7 @@
       </div>
 
       <div id="intro">
-        <h3>Save the Donut!</h6>
+          <h3>Save the Donut!</h6>
           <div id="gamediv">
                 <div id="startbtndiv">
                   <div id="gameOver" class="d-none">
@@ -41,7 +41,8 @@
 
                 </div>
                 <h6 id="scoreheader">Score: <span id="score">0</span></h6>
-        </div>
+          </div>
+          <div id="smallScreen"></div>
       </div>
 
 
@@ -49,7 +50,7 @@
  
  
  
-   <script src="game.js"></script>
+   <script src="js/game.js"></script>
 </body>
 
 </html>
