--- a/forgotpwd.html
+++ b/forgotpwd.html
@@ -15,7 +15,7 @@
         <input placeholder="New Password" class="input" type="password" id="password" />
         <input placeholder="Verify New Password" class="input" type="password" id="password" />
         <button id="loginBtn">Reset</button>
-        <button class="create" id="createAccountBtn">Already have an Account? </button>
-      </form>
+        <button type="button" class="create" id="createAccountBtn" onclick="location.href='login.html'">Already have an Account? </button>
+    </form>
 </body>
 </html>
