--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
         <input id="username" placeholder="Username" class="input" type="text" />
         <input placeholder="Password" class="input" type="password" id="password" />
         <button id="loginBtn">Login</button>
-        <a id="forgotPassword" href="#">Forgotten password?</a>
+        <a id="forgotPassword" href="forgotpwd.html">Forgotten password?</a>
         <button class="create" id="createAccountBtn" onclick="location.href='register.html'">Create new account</button>
       </form>
     </div>
@@ -54,13 +54,6 @@
     </div>
   
   </div>
-
-<div class="doughnut1">
-  <button onclick="">
-<img src="images/doughnut-removebg-preview.png">
-  </button>
-</div>
-
 
   <script src="login.js"></script>
 </body>
