--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css" />
-    <link rel="stylesheet" href="css/profile1.css" />
+    <link rel="stylesheet" href="./css/profile.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
@@ -74,7 +74,7 @@
                         <div class="notifications-popup">
                             <div>
                                 <div class="profile-pic">
-                                    <img class="img" src="./images/profile-10.jpg">
+                                    <img class="img" src="./img/profile-img/profile8.png">
                                 </div>
                                 <div class="notification-body">
                                     <b>Abigail Willey</b> accepted your friend request
@@ -83,7 +83,7 @@
                             </div>
                             <div>
                                 <div class="profile-pic">
-                                    <img class="img" src="./images/profile-11.jpg">
+                                    <img class="img" src="./img/profile-img/profile7.png">
                                 </div>
                                 <div class="notification-body">
                                     <b>Varun Nair</b> commented on your post
@@ -92,7 +92,7 @@
                             </div>
                             <div>
                                 <div class="profile-pic">
-                                    <img class="img" src="./images/profile-12.jpg">
+                                    <img class="img" src="./img/profile-img/profile6.png">
                                 </div>
                                 <div class="notification-body">
                                     <b>Marry Opmong</b> and 210 other liked your post
@@ -101,7 +101,7 @@
                             </div>
                             <div>
                                 <div class="profile-pic">
-                                    <img class="img" src="./images/profile-13.jpg">
+                                    <img class="img" src="./img/profile-img/profile5.png">
                                 </div>
                                 <div class="notification-body">
                                     <b>Wilson Fisk</b> started following you
@@ -207,7 +207,7 @@
                             <header>Create Post</header>
                             <form id="postForm" class="postForm"action ="">
                                 <div class="content">
-                                    <img src="img/donut.jpg" alt="logo">
+                                    <img src="img/my a.webp" alt="logo">
                                     <div class="details">
                                         <p>doughnut</p>
                                         <div class="privacy">
@@ -361,7 +361,7 @@
                     </div>
                     <div class="message">
                         <div class="profile-pic">
-                            <img class="img" src="images/profile-17.jpg">
+                            <img class="img" src="./img/profile-img/profile1.png">
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
@@ -371,7 +371,7 @@
                     </div>
                     <div class="message">
                         <div class="profile-pic">
-                            <img class="img" src="images/profile-18.jpg">
+                            <img class="img" src="./img/profile-img/profile2.png">
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
@@ -381,7 +381,7 @@
                     </div>
                     <div class="message">
                         <div class="profile-pic">
-                            <img class="img" src="images/profile-15.jpg">
+                            <img class="img" src="./img/profile-img/profile3.png">
                         </div>
                         <div class="message-body">
                             <h5>Chris Brown</h5>
@@ -390,7 +390,7 @@
                     </div>
                     <div class="message">
                         <div class="profile-pic">
-                            <img class="img" src="images/profile-14.jpg">
+                            <img class="img" src="./img/profile-img/profile4.png">
                         </div>
                         <div class="message-body">
                             <h5>Lana Rose</h5>
@@ -399,7 +399,7 @@
                     </div>
                     <div class="message">
                         <div class="profile-pic">
-                            <img class="img" src="images/profile-11.jpg">
+                            <img class="img" src="./img/profile-img/profile5.png">
                         </div>
                         <div class="message-body">
                             <h5>Varun Nair</h5>
@@ -408,7 +408,7 @@
                     </div>
                     <div class="message">
                         <div class="profile-pic">
-                            <img class="img" src="images/profile-1.jpg">
+                            <img class="img" src="./img/profile-img/profile6.png">
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
@@ -422,7 +422,7 @@
                     <div class="request">
                         <div class="info">
                             <div class="profile-pic">
-                                <img class="img" src="images/profile-13.jpg">
+                                <img class="img" src="./img/profile-img/profile7.png">
                             </div>
                             <div>
                                 <h5>Wilson Fisk</h5>
@@ -438,7 +438,7 @@
                     <div class="request">
                         <div class="info">
                             <div class="profile-pic">
-                                <img class="img" src="images/profile-20.jpg">
+                                <img class="img" src="./img/profile-img/profile8.png">
                             </div>
                             <div>
                                 <h5>Srishti Tirkey</h5>
@@ -471,7 +471,7 @@
 
 
     <!-- Page-specific code -->
-    <script src="js/profile.js"></script>
+    <script src="./js/profile.js"></script>
 
 
 
