images and post
added missing images and updated post page

--- a/post.html
+++ b/post.html
@@ -69,7 +69,7 @@
                 <div id="postFormContainer" class="card-footer bg-transparent">
                 <form id="postForm">
                   <textarea id="createPost" placeholder="Write your post"></textarea>
-                  <div class="postmebebe">
+                  <div class="postmebebe" data-tooltip="Post it">
                    
                     <button type="submit">
                       <img src="images/donutIcon.svg" alt="Create Post">
