--- a/login.html
+++ b/login.html
@@ -36,35 +36,10 @@
         <input id="username" placeholder="Username" class="input" type="text" required />
         <input placeholder="Password" class="input" type="password" id="password" required />
         <button id="loginBtn">Login</button>
-        <a id="forgotPassword" href="#">Forgotten password?</a>
+        <a id="forgotPassword" href="forgotpwd.html">Forgot Password?</a>
         <button class="create" id="createAccountBtn" onclick="location.href='register.html'">Create new account</button>
       </form>
-=======
-   </div>
-   <div class="doughnut1">
-    <button onclick="">
-  <img src="images/doughnut-removebg-preview.png">
-    </button>
-  </div>
 
-  <form class="form" id="loginForm">
-    <input id="username" placeholder="Username" class="input" type="text" />
-    <input placeholder="Password" class="input" type="password" id="password" />
-    <button id="loginBtn">Login</button>
-    <a id="forgotPassword" href="#">Forgot password?</a>
-    <button class="create" id="createAccountBtn">Create New Account</button>
-  </form>
-
-  <div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-title">About Us</h5>
-      <p class="card-text">
-        Doughnut Diaires is a Free blog where users can sign up 
-        and join the doughnut loving community on an Online platform.
-        At Doughnut Diraires we keep a safe and fun platform where all 
-        doughnut loving enthusists can share their favorite flavors, recipies
-        bakeries, ect. </p>
->>>>>>> Chelsea-Branch
     </div>
     
 
@@ -81,12 +56,6 @@
     </div>
   
   </div>
-
-<div class="doughnut1">
-  <button onclick="">
-<img src="images/doughnut-removebg-preview.png">
-  </button>
-</div>
 
 
   <script src="js/login.js"></script>
