--- a/forgotpwd.html
+++ b/forgotpwd.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!---CSS Style Sheet-->
-    <link rel="stylesheet" href="forgotpwd.css">
+    <link rel="stylesheet" href="./css/forgotpwd.css">
     <title>Forgot Password</title>
    
 </head>
