--- a/profile.html
+++ b/profile.html
@@ -38,7 +38,7 @@
                     <!-- <label class="btn btn-primary" for="create-post">New post</label> -->
 
                     <button id="createprofilebtn" class="btn btn-primary rounded-5 fw-bold" data-bs-toggle="modal"
-                        data-bs-target="#createprofile">
+                        data-bs-target="#editProfileModal">
                         Edit Profile
                     </button>
                     <div class="profile-pic">
@@ -207,10 +207,17 @@
                                     </div>
                                     <div class="options">
                                         <p>Add to Your Post</p>
+                                        <ul id="emojis" style="display: none;">
+                                            <li><img src="./img/emoji/cry.png" id="cry" class="emoji"></li>
+                                            <li><img src="./img/emoji/happy.png" id="happy" class="emoji"></li>
+                                            <li> <img src="./img/emoji/hearteye.png" id="hearteye" class="emoji"></li>
+                                            <li> <img src="./img/emoji/laughtear.png" id="laughtear" class="emoji"></li>
+                                            <li> <img src="./img/emoji/heart.png" id="heart" class="emoji"></li>
+                                        </ul>
                                         <ul class="list">
                                             <li><img src="img/gallery.svg" alt="gallery"></li>
                                             <li><img src="img/tag.svg" alt="gallery"></li>
-                                            <li><img src="img/emoji.svg" alt="gallery"></li>
+                                            <li><img id="showImagesButton" src="img/emoji.svg" alt="gallery"></li>
                                             <li><img src="img/mic.svg" alt="gallery"></li>
                                             <li><img src="img/more.svg" alt="gallery"></li>
                                         </ul>
