--- a/profile1.html
+++ b/profile1.html
@@ -55,7 +55,7 @@
                         <img class="img" src="img/Doughnut_logo.png">
                     </div>
                     <div class="handle">
-                        <h4 id="name">Username</h4>
+                        <h4 id="fullName1">Username</h4>
 
                     </div>
                 </a>
