--- a/profile.html
+++ b/profile.html
@@ -226,13 +226,13 @@
                                 <div class="options">
                                     <p>Add to Your Post</p>
 
-                                    <ul id="emojis" style="display: none;">
-                                        <li><img src="./img/cry.png" id="cry" class="emoji"></li>
-                                        <li><img src="./img/happy.png" id="happy" class="emoji"></li>
-                                        <li> <img src="./img/hearteye.png" id="hearteye" class="emoji"></li>
-                                        <li> <img src="./img/laughtear.png" id="laughtear" class="emoji"></li>
-                                        <li> <img src="./img/heart.png" id="heart" class="emoji"></li>
-                                    </ul>
+                                    <li id="emojis" style="display: none;">
+                                        <img src="./img/cry.png" id="cry" class="emoji">
+                                        <img src="./img/happy.png" id="happy" class="emoji">
+                                         <img src="./img/hearteye.png" id="hearteye" class="emoji">
+                                         <img src="./img/laughtear.png" id="laughtear" class="emoji">
+                                         <img src="./img/heart.png" id="heart" class="emoji">
+                                    </li>
 
 
                                     <ul class="list">
