--- a/profile.html
+++ b/profile.html
@@ -54,7 +54,7 @@
                 <div class="left">
                     <a class="profile">
                         <div class="handle">
-                            <h4 id="username">Username</h4>
+                            <h4 id="fullName1">Username</h4>
                         </div>
                     </a>
                     <div class="sidebar">
