--- a/profile.html
+++ b/profile.html
@@ -296,7 +296,7 @@
                             <p id="bio" class="text-muted">@dddd</p>
 
 
-                                <span>Designer & Developer</span>
+                                <span>Ctrl-Alt-Elite & Doughnut Diaries</span>
                                 <!--<button   class="btn btn-primary" for="create-post" id="editPro" >Edit profile</button>-->
                                 <div>
 
