--- a/profile.html
+++ b/profile.html
@@ -201,13 +201,13 @@
                                     </div>
                                     <div class="options">
                                         <p>Add to Your Post</p>
-                                        <ul id="emojis" style="display: none;">
-                                            <li><img src="./img/emoji/cry.png" id="cry" class="emoji"></li>
-                                            <li><img src="./img/emoji/happy.png" id="happy" class="emoji"></li>
-                                            <li> <img src="./img/emoji/hearteye.png" id="hearteye" class="emoji"></li>
-                                            <li> <img src="./img/emoji/laughtear.png" id="laughtear" class="emoji"></li>
-                                            <li> <img src="./img/emoji/heart.png" id="heart" class="emoji"></li>
-                                        </ul>
+                                        <li id="emojis" style="display: none;">
+                                            <img src="./img/emoji/cry.png" id="cry" class="emoji">
+                                            <img src="./img/emoji/happy.png" id="happy" class="emoji">
+                                             <img src="./img/emoji/hearteye.png" id="hearteye" class="emoji">
+                                             <img src="./img/emoji/laughtear.png" id="laughtear" class="emoji">
+                                             <img src="./img/emoji/heart.png" id="heart" class="emoji">
+                                        </li>
                                         <ul class="list">
                                             <li><img src="img/gallery.svg" alt="gallery"></li>
                                             <li><img src="img/tag.svg" alt="gallery"></li>
