changed some text

--- a/post.html
+++ b/post.html
@@ -175,7 +175,7 @@
                             </div>
                             <div class="message-body">
                               <h5>Aflak Chemali</h5>
-                              <p class="text-bold">Ong glazed is the best</p>
+                              <p class="text-bold">On my momma glazed is the best</p>
                             </div>
                         </div>
                         <div class="message">
@@ -193,7 +193,7 @@
                             </div>
                             <div class="message-body">
                               <h5>Yuen Zhang</h5>
-                              <p class="text-bold">No Cap Mochi donuts schmack frfr</p>
+                              <p class="text-bold">Mochi donuts schmack frfr</p>
                             </div>
                         </div>
                     </div>
