--- a/forgotpwd.html
+++ b/forgotpwd.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!---CSS Style Sheet-->
     <link rel="stylesheet" href="./css/forgotpwd.css">
+    <!--icon-->
+    <link rel="icon" type="image/x-icon" href="img/doughnut.ico">
+
     <title>Forgot Password</title>
    
 </head>
