--- a/register.html
+++ b/register.html
@@ -10,7 +10,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
-      
+        <!--icon-->
+        <link rel="icon" type="image/x-icon" href="img/doughnut.ico">
         <!--CSS Style Sheet-->
         <link rel="stylesheet" href="css/login.css"/>
         <title>Sign Up</title>
