--- a/tempgame.html
+++ b/tempgame.html
@@ -10,8 +10,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
   crossorigin="anonymous"></script>
-
+  <!--css-->
   <link rel="stylesheet" href="css/gams.css" />
+  <!--icon-->
+  <link rel="icon" type="image/x-icon" href="img/doughnut.ico">
   <title>game Page</title>
 </head>
 
